src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__preview_120x40_normal.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform loading... Dir: /repo/environments/production/main
Changes  +1 add  ~1 update  1 replace  -1 destroy

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  # terraform_data.api will be updated in-place                                                                        ▲
  ~ resource "terraform_data" "api" {                                                                                  ┃
      id       = "api-20260920"                                                                                        ┃
      ~ input  = "before" -> "after"                                                                                   ┃
      # (4 unchanged attributes hidden)                                                                                ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
  # terraform_data.worker must be replaced                                                                             ┃
-/+ resource "terraform_data" "worker" {                                                                               ┃
      ~ input = "worker-before" -> "worker-after" # forces replacement                                                 ┃
      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789abcdef"                                       ┃
      + new_checksum = (known after apply)                                                                             ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
  # terraform_data.old will be destroyed                                                                               ┃
  - resource "terraform_data" "old" {                                                                                  ┃
      id = "old-20260920"                                                                                              ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
  # terraform_data.new will be created                                                                                 ┃
  + resource "terraform_data" "new" {                                                                                  ┃
      input = "new-value"                                                                                              ┃
      note  = "A deliberately long synthetic value keeps horizontal scrolling visible"                                 ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
Changes to Outputs:                                                                                                    ┃
  + endpoint = (known after apply)                                                                                     ┃
  ~ summary  = "old summary" -> "new summary with a deliberately long value for review"                                ┃
                                                                                                                       │
Warning: Value for "pending" is not known until apply                                                                  │
                                                                                                                       │
Plan: 2 to add, 1 to change, 2 to destroy.                                                                             │
                                                                                                                       │
Synthetic review text continues below so the viewport and scrollbar remain meaningful.                                 ▼
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
s overview | / filter | a apply | ? help | q quit                                                              Line 3/43
