src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__preview_160x60_apply-confirmation.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform loading... Dir: /repo/environments/production/main  Changes  +1 add  ~1 update  1 replace  -1 destroy

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  # terraform_data.api will be updated in-place
  ~ resource "terraform_data" "api" {
      id       = "api-20260920"
 main [PROD]  ws:default  terraform loading...  /repo/environments/production/main
      # (4 unchanged attributes hidden)
    }

  # terraform_data.worker must be replaced
-/+ resource "terraform_data" "worker" {
      ~ input = "worker-before" -> "worker-after" # forces replacement
      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789abcdef"
      + new_checksum = (known after apply)
    }

  # terraform_data.old will be destroyed
  - resource "terraform_data" "old" {
      id = "old-20260920"
    }                                   ┌──────────────────────────────────────────────────────────────────────────────┐
                                        │                                                                              │
  # terraform_data.new will be created  │ Apply this reviewed plan?                                                    │
  + resource "terraform_data" "new" {   │ ! Warning: this plan destroys or replaces resources in production.           │
      input = "new-value"               │                                                                              │
      note  = "A deliberately long synth│ Target: main [PROD]                                                          │
    }                                   │ Workspace: default                                                           │
                                        │ Directory: /repo/environments/production/main                                │
Changes to Outputs:                     │ Tool: terraform loading...                                                   │
  + endpoint = (known after apply)      │ Planned: 12m ago                                                             │
  ~ summary  = "old summary" -> "new sum│ Plan: +1 add  ~1 update  1 replace  -1 destroy                               │
                                        │                                                                              │
Warning: Value for "pending" is not know│ Destroy:                                                                     │
                                        │   terraform_data.old                                                         │
Plan: 2 to add, 1 to change, 2 to destro│ Replace:                                                                     │
                                        │   terraform_data.worker                                                      │
Synthetic review text continues below so│                                                                              │
The same long body is intentionally reus│ To confirm, type "main" below.                                               │
No Terraform process, provider, state fi│ > |                                                                          │
The review surface preserves Terraform o│                                                                              │
Long lines remain unwrapped in the plan └──────────────────────────────────────────────────────────────────────────────┘
Vertical movement exposes later lines inEnter apply | Esc back | ? help

End of synthetic plan body.














────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
s overview | / filter | a apply | ? help | q quit                                                                                                      Line 3/43
