src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__preview_40x16_help.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default
C┌Help────────────────────────────────┐
-│ Navigation                       ▲ │
 │ ↑ / ↓ / j / k scroll vertically  ┃ │
─│ ← / → / h / l scroll horizontall ┃ │─
 │ PgUp / PgDn   scroll one page    ┃ │▲
 │ Home / End    go to the top or b ┃ │┃
 │ s             overview           ┃ ││
 │                                  │ ││
 │ Review                           │ ││
 │ /             filter the full pl │ ││
 │                                  ▼ ││
◀︎│ ◀︎══════════════════════════────▶︎   │▶︎
─│ ←/→ scroll | ?/Esc close           │─
s└────────────────────────────────────┘
? help | q quit                    L3/43
