src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__preview_40x16_help_bottom.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default
C┌Help────────────────────────────────┐
-│ Review                           ▲ │
 │ /             filter the full pl │ │
─│                                  │ │─
 │ Actions                          │ │▲
 │ c             show execution con ┃ │┃
 │ y             copy the full plan ┃ ││
 │ a             apply the full pla ┃ ││
 │                                  ┃ ││
 │ Exit                             ┃ ││
 │ q             quit               ▼ ││
◀︎│ ◀︎══════════════════════════────▶︎   │▶︎
─│ ←/→ scroll | ?/Esc close           │─
s└────────────────────────────────────┘
? help | q quit                    L3/43
